# NLIP-Project

./: .gitignore  CLAUDE.md  README.md  TEAM_STATUS.md  pyproject.toml
angel_filter/: __init__.py  orchestrator.py  ranker.py  server.py
angel_filter/providers/: __init__.py  base.py  duckduckgo.py  mock.py
docs/: DEV_FALLBACK.md
static/: index.html
tests/: test_orchestrator.py
